设置persize大小测试溢出情况。