@@ -9,11 +9,14 @@ import org.springframework.cglib.proxy.MethodProxy;
 /**
  * 测试perm区溢出
  *
+ * -Xms100m -Xmx200m -XX:NewSize=50m -XX:PermSize=50m
+ *
  * @author zhouyang.zhou. 2017.02.17.15.
  */
 public class PermSizeOOMDemo {
 
   public static void main(String[] args) {
+    int count = 0;
     while (true) {
       Enhancer enhancer = new Enhancer();
       enhancer.setSuperclass(UserEntity.class);
@@ -24,12 +27,7 @@ public class PermSizeOOMDemo {
         }
       });
       Object object = enhancer.create();
-      System.out.println(object == null ? null : object.getClass());
-
-      UserEntity userEntity = (UserEntity) object;
-      String address = userEntity.getAddress();
-      System.out.println(address);
-      break;
+      System.out.printf("%d-->%s\n", count++, (object == null ? null : object.getClass()));
     }
   }
 }
